# OmniX_Engineer

./: .gitignore  CMakeLists.txt  CMakeLists_template.txt  LICENSE  README.md  h10_protocol_extracted.txt  h10_stm32_tutorial_extracted.txt
Core/Inc/: cordic.h  fdcan.h  stm32h7xx_it.h  tim.h
Core/Src/: dma.c  fdcan.c  gpio.c  sdmmc.c  stm32h7xx_it.c  usart.c
Frameworks/bsp_bmi088/: README.md
Frameworks/bsp_bmi088/Src/: bsp_bmi088.c
Frameworks/bsp_buzzer/Inc/: bsp_buzzer.h
Frameworks/bsp_dwt/Inc/: bsp_dwt.h
Frameworks/bsp_fdcan/: README.md
Frameworks/bsp_fdcan/Inc/: bsp_fdcan.h
Frameworks/bsp_fdcan/Src/: bsp_fdcan.c
Frameworks/bsp_i2c/Src/: bsp_i2c.c
Frameworks/bsp_spi/Inc/: bsp_spi.h
Frameworks/bsp_srn_log/Src/: bsp_srn_log.c  bsp_usart1_dma.c
Frameworks/bsp_vt03/Src/: bsp_vt03.c
Frameworks/bsp_ws2812/Src/: bsp_ws2812.c  ws2812_critical.c
Frameworks/lib_24c02/: CMakeLists.txt
Frameworks/lib_adp_dji_c620/: CMakeLists.txt
Frameworks/lib_adp_dji_c620/Src/: lib_adp_dji_c620.cpp
Frameworks/lib_adp_dji_gm6020/: CMakeLists.txt
Frameworks/lib_adp_dm_4310/: CMakeLists.txt
Frameworks/lib_adp_dm_4340/: CMakeLists.txt
Frameworks/lib_adp_lk_mg8016e/: README.md
Frameworks/lib_adp_lk_mg8016e/Inc/: lib_adp_lk_mg8016e.h
Frameworks/lib_adp_lk_mg8016e/Src/: lib_adp_lk_mg8016e.cpp
Frameworks/lib_algos/: README.md
Frameworks/lib_algos/Inc/: kalman_filter.h
Frameworks/lib_algos/Src/: QuaternionEKF.c  kalman_filter.c  mathutil.cpp
Frameworks/lib_fault/: CMakeLists.txt
Frameworks/lib_imu/: README.md
Frameworks/lib_imu/Inc/: lib_imu.h
Frameworks/lib_imu/Src/: lib_imu.cpp  lib_imu_orientation.c
Frameworks/lib_remote_control/: CMakeLists.txt
Frameworks/lib_remote_control/Inc/: lib_remote_control.h
Frameworks/lib_remote_control/Src/: lib_remote_control.c
Frameworks/lib_serial_servo_h10hm/Src/: lib_serial_servo_h10hm.c
Frameworks/lib_serial_servo_h12h/: CMakeLists.txt
Frameworks/lib_serial_servo_h12h/Src/: lib_serial_servo_h12h.c
Frameworks/lib_struct_typedef/: README.md
Frameworks/taskptt_ntfdcan_router/Src/: tskptt_ntfdcan_rx_router.cpp
Frameworks/tskptt_exfdcan_router/: CMakeLists.txt
Frameworks/tskptt_imu/Inc/: tskptt_imu.h
Tasks/Inc/: Log_Task.h  Referee_Task.h  SerialServo_Task.h  Servo_Joint_Angle_Protocol.h  _NTFDCAN_Tasks.h
Tasks/Src/: LED_Task.c  Log_Task.c  SerialServo_Task.c
openocd_config/: omxdevh7-jlnk.cfg
operator/: CMakeLists.txt  CMakeLists_template.txt  WARP.md  h723vg-v2-freertos-engineer.ioc  mlq_muse.mid  mystic.mid
operator/Core/Inc/: adc.h  fmac.h  main.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h
operator/Core/Src/: adc.c  dma.c  eth.c  freertos.c  gpio.c  i2c.c  main.c  octospi.c  stm32h7xx_it.c  tim.c  usart.c
operator/Docs/: Algorithm_Report.md  Motor_Zero_Limit_Direction.md
operator/Frameworks/bsp_bmi088/: CMakeLists.txt
operator/Frameworks/bsp_buzzer/: CMakeLists.txt
operator/Frameworks/bsp_dr16/: README.md
operator/Frameworks/bsp_dwt/: CMakeLists.txt
operator/Frameworks/bsp_i2c/: CMakeLists.txt  README.md
operator/Frameworks/bsp_i2c/Inc/: bsp_i2c.h
operator/Frameworks/bsp_spi/: CMakeLists.txt
operator/Frameworks/bsp_spi/Src/: bsp_spi.c
operator/Frameworks/bsp_srn_log/: README.md
operator/Frameworks/bsp_vt03/: README.md
operator/Frameworks/bsp_ws2812/: CMakeLists.txt
operator/Frameworks/bsp_ws2812/Inc/: bsp_ws2812.h
operator/Frameworks/lib_24c02/: README.md
operator/Frameworks/lib_adp_dji_c620/: README.md
operator/Frameworks/lib_adp_dm_4310/: README.md
operator/Frameworks/lib_adp_lk_mg8016e/: CMakeLists.txt
operator/Frameworks/lib_adp_lk_mg8016e/Inc/: lib_adp_lk_mg8016e.h
operator/Frameworks/lib_adp_lk_mg8016e/Src/: lib_adp_lk_mg8016e.cpp
operator/Frameworks/lib_adp_navision/: CMakeLists.txt  README.md
operator/Frameworks/lib_adp_navision/Inc/: lib_adp_navision.h
operator/Frameworks/lib_adp_navision/Src/: lib_adp_navision.cpp
operator/Frameworks/lib_fault/: README.md
operator/Frameworks/lib_imu/: CMakeLists.txt
operator/Frameworks/lib_imu/Inc/: lib_adp_omximu.h
operator/Frameworks/lib_imu/Src/: lib_adp_omximu.cpp
operator/Frameworks/lib_mcp2518fd/: CMakeLists.txt  README.md
operator/Frameworks/lib_mcp2518fd/Inc/: drv_canfdspi_defines.h  drv_canfdspi_register.h  drv_spi.h
operator/Frameworks/lib_mcp2518fd/Src/: drv_canfdspi_api.c
operator/Frameworks/lib_power_control/: CMakeLists.txt
operator/Frameworks/lib_power_control/Inc/: lib_power_control.h
operator/Frameworks/lib_power_control/Src/: lib_power_control.cpp
operator/Frameworks/lib_remote_control/: README.md
operator/Frameworks/lib_struct_typedef/: .gitignore  CMakeLists.txt
operator/Frameworks/lib_struct_typedef/Inc/: struct_typedef.h
operator/Frameworks/taskptt_ntfdcan_router/: CMakeLists.txt
operator/Frameworks/taskptt_ntfdcan_router/Inc/: NTFDCAN_Router.h
operator/Frameworks/taskptt_ntfdcan_router/Src/: tskptt_ntfdcan_tx_router.cpp
operator/Frameworks/tskptt_imu/: CMakeLists.txt
operator/Frameworks/tskptt_imu/Src/: tskptt_imu.c
operator/Tasks/Inc/: CONF_Chassis_Task.h  CONF_Gimbal_Task.h  CONF_Gimbal_Zero.h  Chassis_Task.h  Gimbal_Debug.h  Gimbal_Task.h  Gimbal_behavior_Task.h  LED_Task.h  RC_Control_Mode.h  Referee_Task.h  Servo_Joint_Angle_Protocol.h  VT03_Gimbal_Mode.h
operator/Tasks/Src/: LED_Task.c  (+7 more)
operator/ci/: build.sh  feishu_notify.py  readme
operator/openocd_config/: omxdevh7-stlk.cfg
robot/: AGENTS.md  STM32H723VGHX_FLASH.ld  h723vg-v2-freertos-engineer.ioc
robot/Frameworks/bsp_dr16/: CMakeLists.txt
robot/Frameworks/bsp_fdcan/: CMakeLists.txt
robot/Frameworks/bsp_srn_log/: CMakeLists.txt
robot/Frameworks/bsp_srn_log/Inc/: bsp_srn_log.h  bsp_usart1_dma.h
robot/Frameworks/lib_algos/: CMakeLists.txt
robot/Frameworks/lib_algos/Inc/: QuaternionEKF.h  filters.h  mahony_filter.h  pid.h
robot/Frameworks/lib_algos/Src/: arm_dsp_compat.c  mahony_filter.c
robot/Frameworks/lib_serial_servo_h10hm/: CMakeLists.txt
robot/Frameworks/lib_serial_servo_h10hm/Inc/: lib_serial_servo_h10hm.h
robot/openocd_config/: omxdevh7-dap.cfg
(+75 files in other folders)
